# chip-8-emu

./: .gitignore  .vimspector.json
include/: chip8.h
src/: CMakeLists.txt  chip8.cpp  main.cpp
